--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,12 +26,24 @@ jobs:
     steps:
       - checkout
       - *prepare_venv
+      - run: sudo chown -R circleci:circleci /usr/local/bin
+      - run: sudo chown -R circleci:circleci /usr/local/lib/python3.7/site-packages
+      - restore_cache:
+          key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
+
       - run: 
           name: Install requirements
           command: |
             . venv/bin/activate
             pip install -r packages/cnn_modality_clf/requirements.txt
       - *fetch_data
+      - save_cache:
+          paths:
+            - ".venv"
+            - "/usr/local/bin"
+            - "/usr/local/lib/python3.7/site-packages"
+            
+          key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
       - run:
           name: Train model 
           command: |
