--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
           name: Train model 
           command: |
             . venv/bin/activate
+            PYTHONPATH=./packages/cnn_modality_clf python3 packages/cnn_modality_clf/cnn_modality_clf/train_pipeline.py
 
 workflows:
   version: 2.1
